cpp/zad1/error_log.txt
main.cpp: In function ‘int main()’:
main.cpp:18:9: error: ‘count’ was not declared in this scope
   18 |         count<<"macie mniej lub 100 lat"<<endl;
      |         ^~~~~
main.cpp:21:9: error: ‘count’ was not declared in this scope
   21 |         count<<"osoba pierwsza jest starsza"<<endl;
      |         ^~~~~
main.cpp:24:1: error: ‘count’ was not declared in this scope
   24 | count<<"osoba druga jest starsza"<<endl;
      | ^~~~~
